strapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./backend/docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: strapi
  name: strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: strapi
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./backend/docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/strapi: "true"
        io.kompose.service: strapi
    spec:
      containers:
        - env:
            - name: ADMIN_JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_JWT_SECRET
                  name: env
            - name: API_TOKEN
              valueFrom:
                configMapKeyRef:
                  key: API_TOKEN
                  name: env
            - name: API_TOKEN_SALT
              valueFrom:
                configMapKeyRef:
                  key: API_TOKEN_SALT
                  name: env
            - name: APP_KEYS
              valueFrom:
                configMapKeyRef:
                  key: APP_KEYS
                  name: env
            - name: DATABASE_CLIENT
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_CLIENT
                  name: env
            - name: DATABASE_HOST
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_HOST
                  name: env
            - name: DATABASE_NAME
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_NAME
                  name: env
            - name: DATABASE_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_PASSWORD
                  name: env
            - name: DATABASE_PORT
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_PORT
                  name: env
            - name: DATABASE_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_USERNAME
                  name: env
            - name: HOST
              valueFrom:
                configMapKeyRef:
                  key: HOST
                  name: env
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: env
            - name: NODE_ENV
              valueFrom:
                configMapKeyRef:
                  key: NODE_ENV
                  name: env
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: env
          image: mystrapi:latest
          name: strapi
          ports:
            - containerPort: 1337
          resources: {}
          volumeMounts:
            - mountPath: /opt/app/config
              name: strapi-claim0
            - mountPath: /opt/app/src
              name: strapi-claim1
            - mountPath: /opt/package.json
              name: strapi-claim2
            - mountPath: /opt/yarn.lock
              name: strapi-claim3
            - mountPath: /opt/app/.env
              name: strapi-claim4
      restartPolicy: Always
      volumes:
        - name: strapi-claim0
          persistentVolumeClaim:
            claimName: strapi-claim0
        - name: strapi-claim1
          persistentVolumeClaim:
            claimName: strapi-claim1
        - name: strapi-claim2
          persistentVolumeClaim:
            claimName: strapi-claim2
        - name: strapi-claim3
          persistentVolumeClaim:
            claimName: strapi-claim3
        - name: strapi-claim4
          persistentVolumeClaim:
            claimName: strapi-claim4
status: {}
