strapidb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./backend/docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: strapidb
  name: strapidb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: strapidb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./backend/docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/strapi: "true"
        io.kompose.service: strapidb
    spec:
      containers:
        - env:
            - name: ADMIN_JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_JWT_SECRET
                  name: env
            - name: API_TOKEN
              valueFrom:
                configMapKeyRef:
                  key: API_TOKEN
                  name: env
            - name: API_TOKEN_SALT
              valueFrom:
                configMapKeyRef:
                  key: API_TOKEN_SALT
                  name: env
            - name: APP_KEYS
              valueFrom:
                configMapKeyRef:
                  key: APP_KEYS
                  name: env
            - name: DATABASE_CLIENT
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_CLIENT
                  name: env
            - name: DATABASE_HOST
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_HOST
                  name: env
            - name: DATABASE_NAME
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_NAME
                  name: env
            - name: DATABASE_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_PASSWORD
                  name: env
            - name: DATABASE_PORT
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_PORT
                  name: env
            - name: DATABASE_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_USERNAME
                  name: env
            - name: HOST
              valueFrom:
                configMapKeyRef:
                  key: HOST
                  name: env
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: env
            - name: NODE_ENV
              valueFrom:
                configMapKeyRef:
                  key: NODE_ENV
                  name: env
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: env
            - name: POSTGRES_DB
            - name: POSTGRES_PASSWORD
            - name: POSTGRES_USER
          image: postgres:12.0-alpine
          name: strapidb
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/
              name: strapi-data
      restartPolicy: Always
      volumes:
        - name: strapi-data
          persistentVolumeClaim:
            claimName: strapi-data
status: {}
